Proj 5 and readme

--- a/proj_8.ipynb
+++ b/proj_8.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "def lower_upper_limits(domain, fun, popt, pcov, nsigma=1):\n",
-    "    '''Вычисляет минимальные и максимальные значения функции \n",
+    "    '''Вычисляет минимальные и максимальные значения функции\n",
     "    при заданных парамерах и стандартных отклонениях\n",
     "    в пределах nsigma*стандартное отклонение\n",
     "    Возвращает:\n",
@@ -64,7 +64,7 @@
     "    maxA :(np.array) - массив максимальных значений'''\n",
     "    err = np.sqrt(np.diag(pcov))\n",
     "    corr = pcov /np.expand_dims(err, 1) / np.expand_dims(err, 0)\n",
-    "    deviations = np.eye(popt.size)*np.expand_dims(err, 1)  \n",
+    "    deviations = np.eye(popt.size)*np.expand_dims(err, 1)\n",
     "    df = np.expand_dims(fun(domain, *popt), 1) - fun(np.expand_dims(domain, 1), *(np.expand_dims(popt, 1)+np.eye(popt.size)*np.expand_dims(err, 1)))\n",
     "    dfmatrixes = np.expand_dims(df, 1)*np.expand_dims(df, 2) * np.expand_dims(corr, 0)\n",
     "    sigm_f = np.sqrt(np.sum(dfmatrixes, axis=(1, 2)))\n",
@@ -91,7 +91,7 @@
     "            else:\n",
     "                name, units = *t, ''\n",
     "            approx_label += f\"\\n{name} = {err_pres_formatter(popt[i], err[i])} {units}\"\n",
-    "    teorPoints = 50     \n",
+    "    teorPoints = 50\n",
     "    indent = 0.05   # отступ по бокам от обласи экспериментальных данных\n",
     "    a, b = x.min(), x.max()\n",
     "    X = np.linspace(a-(b-a)*indent, b+(b-a)*indent, num=teorPoints)\n",
@@ -121,8 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8\n",
-    "Metropolis numerical integration algorithm."
+    "## 8 Application of Metropolis numerical integration algorithm."
    ]
   },
   {
@@ -149,22 +148,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "   \n",
-    "def model_dist(N: int, \n",
-    "               distribution_func: Callable[[float], float], \n",
-    "               max_delta, \n",
-    "               step_dist:Callable[[float], float]=(lambda delta: np.random.uniform(-delta, delta)), \n",
+    "\n",
+    "def model_dist(N: int,\n",
+    "               distribution_func: Callable[[float], float],\n",
+    "               max_delta,\n",
+    "               step_dist:Callable[[float], float]=(lambda delta: np.random.uniform(-delta, delta)),\n",
     "               init_value=0,\n",
     "               return_frac=False) -> np.array:\n",
     "    if distribution_func(init_value) <= 0:\n",
     "        raise ValueError(\"Init value probability is invalid\")\n",
-    "    \n",
+    "\n",
     "    series = np.zeros(N)\n",
     "    series[0] = init_value\n",
-    "    \n",
+    "\n",
     "    accepted_steps = 0\n",
     "    all_steps = 0\n",
-    "    \n",
+    "\n",
     "    for i in range(N-1):\n",
     "        x_i = series[i]\n",
     "        x_try = x_i + step_dist(max_delta)\n",
@@ -267,7 +266,7 @@
     "results = np.array(results)\n",
     "\n",
     "mean = results.mean()\n",
-    "error = np.sqrt((np.mean(results**2)-mean**2)/(len(results)-1))    \n",
+    "error = np.sqrt((np.mean(results**2)-mean**2)/(len(results)-1))\n",
     "\n",
     "print(f\"<X^2> = {mean} +- {error}\")"
    ]
@@ -389,20 +388,20 @@
     "            accepted_fracs.append(frac)\n",
     "        results = np.array(results)\n",
     "        mean = results.mean()\n",
-    "        error = np.sqrt((np.mean(results**2)-mean**2))  \n",
-    "        \n",
-    "        text.append(f\"n = {n}, d = {d}\")  \n",
+    "        error = np.sqrt((np.mean(results**2)-mean**2))\n",
+    "\n",
+    "        text.append(f\"n = {n}, d = {d}\")\n",
     "        errors.append(error)\n",
     "        value.append(mean)\n",
     "        accept_rates.append(np.mean(accepted_fracs))\n",
     "\n",
     "compare_table = pd.DataFrame(\n",
     "    {\"description\":text,\n",
-    "     \"value\":value, \n",
-    "     \"standard deviation\":errors, \n",
+    "     \"value\":value,\n",
+    "     \"standard deviation\":errors,\n",
     "     \"tries accepting rate\": accept_rates}\n",
     "    )\n",
-    "compare_table.style.hide(axis=\"index\").format({\"standard deviation\": numb_formatter, \n",
+    "compare_table.style.hide(axis=\"index\").format({\"standard deviation\": numb_formatter,\n",
     "                                               \"value\": numb_formatter,\n",
     "                                               \"tries accepting rate\": numb_formatter})"
    ]
@@ -485,7 +484,7 @@
     "def f(x, k, b):\n",
     "    return np.exp(b - x/k)\n",
     "par_names_str = fr'''\n",
-    "$\\tau$, \n",
+    "$\\tau$,\n",
     "'''\n",
     "filter = j_range<35\n",
     "plot_approx(j_range[filter], C[filter], f, par_names_str, fun_name, visApproxError=False)\n",
@@ -504,7 +503,7 @@
     "def f(x, k, b):\n",
     "    return b - x/k\n",
     "par_names_str = fr'''\n",
-    "$\\tau$, \n",
+    "$\\tau$,\n",
     "'''\n",
     "filter = j_range<35\n",
     "plot_approx(j_range[filter], np.log(C)[filter], f, par_names_str, fun_name, visApproxError=False)\n",
